--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,4 +1,4 @@
-<section class="no-padding" id="portfolio">
+<section class="no-padding" id="blog">
     <div class="container-fluid">
         <div class="row no-gutter">
             {% for item in site.posts %}
