--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,8 +6,8 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-  {% include services.html %}
-  {% include portfolio.html %}
+  {% include raceclub.html %}
+  {% include blog.html %}
   {% include contact.html %}
   {% include instagram.html %}
   {% include scripts.html %}
